fixed letter cutoffs in title

--- a/Develop/public/assets/css/styles.css
+++ b/Develop/public/assets/css/styles.css
@@ -34,6 +34,8 @@ body {
   height: 50px;
   margin-top: 13px;
   font-size: 3rem;
+  padding-left: 0px;
+  padding-bottom: 13px;
 }
 
 .note-title:read-only,
@@ -42,7 +44,7 @@ body {
 }
 
 .list-container .card {
-  height: calc(100vh - 70px);
+  height: calc(100vh - 76px);
   border-bottom: none;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
